src/ERROR.log
Traceback (most recent call last):
  File "./main.py", line 32, in <module>
    BaseApp().run()
  File "c:\Users\eavaste\Desktop\App\ktaboo\venv\lib\site-packages\kivy\app.py", line 950, in run
    runTouchApp()
  File "c:\Users\eavaste\Desktop\App\ktaboo\venv\lib\site-packages\kivy\base.py", line 582, in runTouchApp
    EventLoop.mainloop()
  File "c:\Users\eavaste\Desktop\App\ktaboo\venv\lib\site-packages\kivy\base.py", line 347, in mainloop
    self.idle()
  File "c:\Users\eavaste\Desktop\App\ktaboo\venv\lib\site-packages\kivy\base.py", line 387, in idle
    Clock.tick()
  File "c:\Users\eavaste\Desktop\App\ktaboo\venv\lib\site-packages\kivy\clock.py", line 733, in tick
    self.post_idle(ts, self.idle())
  File "c:\Users\eavaste\Desktop\App\ktaboo\venv\lib\site-packages\kivy\clock.py", line 776, in post_idle
    self._process_events()
  File "kivy\_clock.pyx", line 616, in kivy._clock.CyClockBase._process_events
  File "kivy\_clock.pyx", line 649, in kivy._clock.CyClockBase._process_events
  File "kivy\_clock.pyx", line 645, in kivy._clock.CyClockBase._process_events
  File "kivy\_clock.pyx", line 218, in kivy._clock.ClockEvent.tick
  File ".\uix\pages\root.py", line 49, in add_screens
    Builder.load_file(screen_details["kv"])  # You must import kv before
  File "c:\Users\eavaste\Desktop\App\ktaboo\venv\lib\site-packages\kivy\lang\builder.py", line 306, in load_file
    return self.load_string(data, **kwargs)
  File "c:\Users\eavaste\Desktop\App\ktaboo\venv\lib\site-packages\kivy\lang\builder.py", line 373, in load_string
    parser = Parser(content=string, filename=fn)
  File "c:\Users\eavaste\Desktop\App\ktaboo\venv\lib\site-packages\kivy\lang\parser.py", line 402, in __init__
    self.parse(content)
  File "c:\Users\eavaste\Desktop\App\ktaboo\venv\lib\site-packages\kivy\lang\parser.py", line 515, in parse
    rule.precompile()
  File "c:\Users\eavaste\Desktop\App\ktaboo\venv\lib\site-packages\kivy\lang\parser.py", line 264, in precompile
    x.precompile()
  File "c:\Users\eavaste\Desktop\App\ktaboo\venv\lib\site-packages\kivy\lang\parser.py", line 264, in precompile
    x.precompile()
  File "c:\Users\eavaste\Desktop\App\ktaboo\venv\lib\site-packages\kivy\lang\parser.py", line 264, in precompile
    x.precompile()
  [Previous line repeated 1 more time]
  File "c:\Users\eavaste\Desktop\App\ktaboo\venv\lib\site-packages\kivy\lang\parser.py", line 260, in precompile
    x.precompile()
  File "c:\Users\eavaste\Desktop\App\ktaboo\venv\lib\site-packages\kivy\lang\parser.py", line 187, in precompile
    self.co_value = compile(value, self.ctx.filename or '<string>', mode)
  File "C:\Users\eavaste\Desktop\App\ktaboo\src\uix\pages\kv\game_screen.kv", line 23
    5dp
      ^
SyntaxError: unexpected EOF while parsing
